--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3-beta-4",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
