--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3-beta-4",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "nuxt-lazy-load": "^1.2.6"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.1",
